<resources>
    <string name="app_name">tourism</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="email_address">Email Address :</string>
    <string name="password">Password :</string>
    <string name="confirm_password">Confirm Password :</string>

    <string name="already_have_an_account">Already have an account ?</string>


    <string name="register">Register :</string>
    <string name="welcome">Welcome</string>
    <string name="e_mail">E-mail</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sing_up">Sing Up.</string>
    <string name="sing_in">Sing In.</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="filter">Filter</string>
    <string name="search_with_radius_filter">Search With Radius Filter</string>


    <string-array name="gender">
        <item>
           Choose Gender
        </item>
        <item>
             Male
        </item>
        <item>
          Female
        </item>
        <item>
       Other
    </item>

    </string-array>

</resources>