<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.Activity.RegisterActivity">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/arizonia"
        android:text="@string/register"
        android:textColor="@color/olive"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oregano"
        android:text="@string/first_name"
        android:textColor="@color/olive"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/firstname_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:backgroundTint="@color/bar"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="45dip"
        android:padding="5dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oregano"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/lastname_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:backgroundTint="@color/bar"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="45dip"
        android:padding="5dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oregano"
        android:text="@string/email_address"
        android:textColor="@color/olive"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/Email_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        android:background="@color/white"
        android:backgroundTint="@color/bar"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="45dip"
        android:padding="5dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oregano"
        android:text="@string/password"
        android:textColor="@color/olive"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/Password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:backgroundTint="@color/bar"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="45dip"
        android:padding="5dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oregano"
        android:text="@string/confirm_password"
        android:textColor="@color/olive"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ConfirmPassword_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/bar"
        android:backgroundTint="@color/bar"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="45dip"
        android:padding="5dp" />

    <Button
        android:id="@+id/SingUp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/olive"
        android:fontFamily="@font/oregano"
        android:text="register"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/already_have_an_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/SingIn_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/sing_in"
            android:textColor="@color/olive"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>